<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.BmiCalculatorFragment"
    android:padding="@dimen/_8sdp"
    android:orientation="vertical">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sm_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:text="@string/bmi_calculator_unit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/bmi_calculator_weight"

        app:helperTextEnabled="true"
        app:errorEnabled="true"
        app:helperText="@string/bmi_calculator_weight_helper_text"
        app:suffixText="lbs"
        app:startIconDrawable="@drawable/ic_weight"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">
        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/lv_standard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_height_foot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/bmi_calculator_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sm_switch"

            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:helperText="@string/bmi_calculator_height_foot_helper_text"
            app:suffixText="Ft"
            app:startIconDrawable="@drawable/ic_height"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_height_inch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/bmi_calculator_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sm_switch"

            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:helperText="@string/bmi_calculator_height_inch_helper_text"
            app:suffixText="In"
            app:startIconDrawable="@drawable/ic_height"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_height_cm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/bmi_calculator_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sm_switch"

            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:helperText="@string/bmi_calculator_height_centimeter_helper_text"
            app:suffixText="cm"
            app:startIconDrawable="@drawable/ic_height"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_calculator_calculate_button"
            style="@style/Widget.MaterialComponents.Button"
            />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_calculator_clear_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />


</LinearLayout>