<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_lift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/onerm_calculator_lift"

        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_workout"
        app:suffixText="lbs">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_1rm_calculator_repetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Repetition: 1"
        >

    </TextView>
    <com.google.android.material.slider.Slider
        android:id="@+id/sv_rep_or_duration_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="20"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onerm_calculator_calculate_button"
        style="@style/Widget.MaterialComponents.Button"
        />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator_clear_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
</LinearLayout>