<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="@dimen/_600sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">
    <TextView
        android:id="@+id/tv_new_routine_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create a new routine"
        android:layout_marginBottom="@dimen/_16sdp"
        android:textSize="@dimen/_16sdp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ev_routine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_routine_name_label"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pick_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pick a schedule" />
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_type_picker"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_16sdp"
        app:singleSelection="true"
        app:selectionRequired="true"
        >
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_monday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_monday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_tuesday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_tuesday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_wednesday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_wednesday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_thursday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_thursday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_friday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_friday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_saturday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_saturday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_sunday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_sunday"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_on_demand"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/type_on_demand"/>
</com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_pick_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pick a color" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_color_picker"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_16sdp"
        app:singleSelection="true"
        app:selectionRequired="true"
        >
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_color_red"
            app:chipBackgroundColor="@color/label_red"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:checkedIconTint="@color/white"
            app:checkedIconVisible="true"
            app:checkedIcon="@drawable/ic_check"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_color_orange"
            app:chipBackgroundColor="@color/label_orange"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:checkedIconTint="@color/white"
            app:checkedIconVisible="true"
            app:checkedIcon="@drawable/ic_check"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_color_yellow"
            app:chipBackgroundColor="@color/label_yellow"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:checkedIconTint="@color/white"
            app:checkedIconVisible="true"
            app:checkedIcon="@drawable/ic_check"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_color_green"
            app:chipBackgroundColor="@color/label_green"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:checkedIconTint="@color/white"
            app:checkedIconVisible="true"
            app:checkedIcon="@drawable/ic_check"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_color_aqua"
            app:chipBackgroundColor="@color/label_aqua"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:checkedIconTint="@color/white"
            app:checkedIconVisible="true"
            app:checkedIcon="@drawable/ic_check"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_color_blue"
            app:chipBackgroundColor="@color/label_blue"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:checkedIconTint="@color/white"
            app:checkedIconVisible="true"
            app:checkedIcon="@drawable/ic_check"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_color_purple"
            app:chipBackgroundColor="@color/label_purple"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:checkedIconTint="@color/white"
            app:checkedIconVisible="true"
            app:checkedIcon="@drawable/ic_check"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_color_pink"
            app:chipBackgroundColor="@color/label_pink"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:checkedIconTint="@color/white"
            app:checkedIconVisible="true"
            app:checkedIcon="@drawable/ic_check"/>
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/btn_routine_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="right"
        android:text="Create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ev_routine_name" />

</LinearLayout>
</RelativeLayout >